fix visible scroll at vendorStrip in desktop

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -584,6 +584,8 @@ section
     line-height: 44px
     max-width: 100%
     overflow-x: auto
+    overflow-y: hidden
+    z-index: 0
     -webkit-overflow-scrolling: touch
 
     ul
